# Peafowl

./: .gitignore  .gitmodules  A_n2_m20_q128_p64.npy  A_n2_m21_q128_p64.npy  LinearSVMDataset.py  README.md  SSMVFL_mpc_sdap.py  dataset.py  dataset2.py  launcher.py  launcher_stitch.py  main.py  main2 copy.py  main2.py  main2_.py  main3.py  mpc_sdap.py  mpc_stitch.py  multiprocess_launcher.py  profile_rank_0.txt  profile_rank_1.txt  profile_rank_10.txt  profile_rank_2.txt  profile_rank_3.txt  profile_rank_4.txt  profile_rank_5.txt  profile_rank_6.txt  profile_rank_7.txt  profile_rank_8.txt  profile_rank_9.txt  python.80s-11904,5b2dd699dca0.btr  python.80s-12119,5b2dd699dca0.btr  python.80s-12334,5b2dd699dca0.btr  python.80s-13120,5b2dd699dca0.btr  shprg.py.lprof  test.py  test.sh  test.txt  testDS.py
src/communicator/: STComm.py  node.py
src/utils/: encoder.py  h5dataset.py
src/utils/crypto/: CMakeLists.txt  bind_code.sh  cuda_addition  cuda_addition.cu  lwr.cpp  lwr.cu  matmul_test.py  prf.py  shprg.py  test_mul_uint64  test_mul_uint64.cu
src/utils/hprg/: shprg.py  shprg_np.py
test/: CMakeLists.txt  mpi_group.py  mpi_manage.py  my_dot.c  my_dot.pyx  setup.py  test  test.py  test_node.py
